--- a/RegionalCorrelations2.Rmd
+++ b/RegionalCorrelations2.Rmd
@@ -20,7 +20,7 @@ knew.molten3 = knew.molten2 %>%
 
 cluster.method = "hclust"
 use.method = "complete.obs"
-corr.type = "kendall"
+corr.type = "pearson"
 
 ```
 
@@ -36,7 +36,7 @@ a = knew.molten3 %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
 
-cor1 = cor(a[,2:75], a[,2:75], use=use.method, method=corr.type)
+cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
 corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title="all shock arc", mar=c(0,0,1,0))
 
 a = knew.molten3 %>%
@@ -47,7 +47,7 @@ a = knew.molten3 %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
 
-cor1 = cor(a[,2:75], a[,2:75], use=use.method, method=corr.type)
+cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
 corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title="all context arc", mar=c(0,0,1,0))
 
 ```
@@ -65,7 +65,7 @@ a = knew.molten3 %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
 
-cor1 = cor(a[,2:75], a[,2:75], use=use.method, method=corr.type)
+cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
 corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title="shock AA", mar=c(0,0,1,0))
 
 
@@ -77,7 +77,7 @@ a = knew.molten3 %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
 
-cor1 = cor(a[,2:75], a[,2:75], use=use.method, method=corr.type)
+cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
 corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title="shock AB", mar=c(0,0,1,0))
 
 
@@ -89,7 +89,7 @@ a = knew.molten3 %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
 
-cor1 = cor(a[,2:75], a[,2:75], use=use.method, method=corr.type)
+cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
 corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title="ctx AA", mar=c(0,0,1,0))
 
 
@@ -101,7 +101,7 @@ a = knew.molten3 %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
 
-cor1 = cor(a[,2:75], a[,2:75], use=use.method, method=corr.type)
+cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
 corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title="ctx AB", mar=c(0,0,1,0))
 
 
@@ -120,7 +120,7 @@ a = knew.molten3 %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
 
-cor1 = cor(a[,2:75], a[,2:75], use=use.method, method=corr.type)
+cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
 corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title="all young", mar=c(0,0,1,0))
 
 a = knew.molten3 %>%
@@ -131,7 +131,7 @@ a = knew.molten3 %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
 
-cor1 = cor(a[,2:75], a[,2:75], use=use.method, method=corr.type)
+cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
 corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title="all old", mar=c(0,0,1,0))
 
 ```
@@ -146,7 +146,7 @@ a = knew.molten3 %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
 
-cor1 = cor(a[,2:75], a[,2:75], use=use.method, method=corr.type)
+cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
 corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title="all AA", mar=c(0,0,1,0))
 
 a = knew.molten3 %>%
@@ -157,7 +157,7 @@ a = knew.molten3 %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
 
-cor1 = cor(a[,2:75], a[,2:75], use=use.method, method=corr.type)
+cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
 corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title="all AB", mar=c(0,0,1,0))
 
 ```
@@ -172,7 +172,7 @@ a = knew.molten3 %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
 
-cor1 = cor(a[,2:75], a[,2:75], use=use.method, method=corr.type)
+cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
 corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title="all shock ol", mar=c(0,0,1,0))
 
 a = knew.molten3 %>%
@@ -183,7 +183,7 @@ a = knew.molten3 %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
 
-cor1 = cor(a[,2:75], a[,2:75], use=use.method, method=corr.type)
+cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
 corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title="all context ol", mar=c(0,0,1,0))
 
 ```
@@ -201,7 +201,7 @@ a = knew.molten3 %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
 
-cor1 = cor(a[,2:75], a[,2:75], use=use.method, method=corr.type)
+cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
 corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title=" shock AA", mar=c(0,0,1,0))
 
 
@@ -213,7 +213,7 @@ a = knew.molten3 %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
 
-cor1 = cor(a[,2:75], a[,2:75], use=use.method, method=corr.type)
+cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
 corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title=" shock AB", mar=c(0,0,1,0))
 
 
@@ -225,7 +225,7 @@ a = knew.molten3 %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
 
-cor1 = cor(a[,2:75], a[,2:75], use=use.method, method=corr.type)
+cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
 corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title=" ctx AA", mar=c(0,0,1,0))
 
 
@@ -237,7 +237,7 @@ a = knew.molten3 %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
 
-cor1 = cor(a[,2:75], a[,2:75], use=use.method, method=corr.type)
+cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
 corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title=" ctx AB", mar=c(0,0,1,0))
 
 
@@ -256,7 +256,7 @@ a = knew.molten3 %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
 
-cor1 = cor(a[,2:75], a[,2:75], use=use.method, method=corr.type)
+cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
 corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title="all shock h2b", mar=c(0,0,1,0))
 
 a = knew.molten3 %>%
@@ -267,7 +267,7 @@ a = knew.molten3 %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
 
-cor1 = cor(a[,2:75], a[,2:75], use=use.method, method=corr.type)
+cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
 corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title="all context h2b", mar=c(0,0,1,0))
 
 ```
@@ -284,7 +284,7 @@ a = knew.molten3 %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
 
-cor1 = cor(a[,2:75], a[,2:75], use=use.method, method=corr.type)
+cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
 corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title="shock AA", mar=c(0,0,1,0))
 
 
@@ -296,7 +296,7 @@ a = knew.molten3 %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
 
-cor1 = cor(a[,2:75], a[,2:75], use=use.method, method=corr.type)
+cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
 corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title="shock AB", mar=c(0,0,1,0))
 
 
@@ -308,7 +308,7 @@ a = knew.molten3 %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
 
-cor1 = cor(a[,2:75], a[,2:75], use=use.method, method=corr.type)
+cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
 corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title="ctx AA", mar=c(0,0,1,0))
 
 
@@ -320,7 +320,7 @@ a = knew.molten3 %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
 
-cor1 = cor(a[,2:75], a[,2:75], use=use.method, method=corr.type)
+cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
 corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title="ctx AB", mar=c(0,0,1,0))
 
 
