--- a/RegionalCorrelations2.Rmd
+++ b/RegionalCorrelations2.Rmd
@@ -11,9 +11,13 @@ Conditions in this set of graphs:
 - 4. Ordering by "hclust"
 - 5. Removed bad freezers from young group
 
+## Update on Jun 9:
+All heatmaps have been updated so that p-values matrix have been compared, and all values that are NOT significant have been blanked out as white tiles in the matrix. 
+
 ```{r}
 source("LoadLibs.R")
 library(corrplot)
+library(psych)
 knew.molten3 = knew.molten2 %>%
   filter(UNITS == "density") %>%
   filter(BRIGHTNESS == 'total')
@@ -24,8 +28,96 @@ corr.type = "pearson"
 
 ```
 
+### R vs P values show that R don't always correlate with significance
+```{r}
+
+a = knew.molten3 %>%
+  filter(CHANNEL == 'OL') %>%
+  filter(!(EXPT =='YOUNG' & VALENCE=='SHOCK' & CONTEXT=='AA' & FREEZE < 30)) %>% # removes young bad freezers
+  mutate(grain2 = paste(CHANNEL, SubROI_SubroiAGGR)) %>%
+  ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
+  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
+  mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
+
+b = corr.test(a[,2:67])
+
+r.melt = b$r %>% melt()
+p.melt = b$p %>% melt()
+r.melt = r.melt %>% mutate(p = p.melt$value) %>% filter(p<1 & p>0)
+ggplot(r.melt) + aes(value, p) + geom_jitter() +
+  ggtitle("OL, Pearson's r vs. p-values (holm-corrected)")
+
+###########################################
+
+a = knew.molten3 %>%
+  filter(EXPT=='YOUNG') %>%
+  filter(CHANNEL == 'H2BGFP') %>%
+  filter(!(EXPT =='YOUNG' & VALENCE=='SHOCK' & CONTEXT=='AA' & FREEZE < 30)) %>% # removes young bad freezers
+  mutate(grain2 = paste(CHANNEL, SubROI_SubroiAGGR)) %>%
+  ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
+  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
+  mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
+
+b = corr.test(a[,2:67])
+
+r.melt = b$r %>% melt()
+p.melt = b$p %>% melt()
+r.melt = r.melt %>% mutate(p = p.melt$value)  %>% filter(p<1 & p>0)
+ggplot(r.melt) + aes(value, p) + geom_point() +
+  ggtitle("H2BGFP, Pearson's r vs. p-values (holm-corrected)")
+
+###########################################
+
+a = knew.molten3 %>%
+  filter(CHANNEL == 'ArcIHC') %>%
+  filter(!(EXPT =='YOUNG' & VALENCE=='SHOCK' & CONTEXT=='AA' & FREEZE < 30)) %>% # removes young bad freezers
+  mutate(grain2 = paste(CHANNEL, SubROI_SubroiAGGR)) %>%
+  ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
+  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
+  mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
+
+b = corr.test(a[,2:67])
+
+r.melt = b$r %>% melt()
+p.melt = b$p %>% melt()
+r.melt = r.melt %>% mutate(p = p.melt$value)  %>% filter(p<1 & p>0)
+ggplot(r.melt) + aes(value, p) + geom_point() +
+  ggtitle("ArcIHC, Pearson's r vs. p-values (holm-corrected)")
+```
+
+
 ## Arc
-Major differences between all shock and context animals
+### Arc Old vs Young
+```{r}
+
+a = knew.molten3 %>%
+  filter(EXPT == 'YOUNG') %>%
+  filter(CHANNEL == 'OL') %>%
+  filter(!(EXPT =='YOUNG' & VALENCE=='SHOCK' & CONTEXT=='AA' & FREEZE < 30)) %>% # removes young bad freezers
+  mutate(grain2 = paste(CHANNEL, SubROI_SubroiAGGR)) %>%
+  ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
+  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) %>%
+  mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .)))
+
+b = corr.test(a[,2:67])
+corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="all young", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
+
+a = knew.molten3 %>%
+  filter(EXPT == 'OLD') %>%
+  filter(CHANNEL == 'OL') %>%
+  filter(!(EXPT =='YOUNG' & VALENCE=='SHOCK' & CONTEXT=='AA' & FREEZE < 30)) %>% # removes young bad freezers
+  mutate(grain2 = paste(CHANNEL, SubROI_SubroiAGGR)) %>%
+  ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
+  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) %>%
+  mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
+
+b = corr.test(a[,2:67])
+corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="all old", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
+
+```
+
+
+### Arc all shock and context animals
 ```{r}
 
 a = knew.molten3 %>%
@@ -34,10 +126,11 @@ a = knew.molten3 %>%
   filter(!(EXPT =='YOUNG' & VALENCE=='SHOCK' & CONTEXT=='AA' & FREEZE < 30)) %>% # removes young bad freezers
   mutate(grain2 = paste(CHANNEL, SubROI_SubroiAGGR)) %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
-  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
+  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
+  mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
-corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title="all shock arc", mar=c(0,0,1,0))
+b = corr.test(a[,2:67])
+corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="all shock arc", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 a = knew.molten3 %>%
   filter(VALENCE == 'CONTEXT') %>%
@@ -45,10 +138,11 @@ a = knew.molten3 %>%
   filter(!(EXPT =='YOUNG' & VALENCE=='SHOCK' & CONTEXT=='AA' & FREEZE < 30)) %>% # removes young bad freezers
   mutate(grain2 = paste(CHANNEL, SubROI_SubroiAGGR)) %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
-  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
+  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
+  mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
-corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title="all context arc", mar=c(0,0,1,0))
+b = corr.test(a[,2:67])
+corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="all context arc", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 ```
 
@@ -63,10 +157,11 @@ a = knew.molten3 %>%
   filter(!(EXPT =='YOUNG' & VALENCE=='SHOCK' & CONTEXT=='AA' & FREEZE < 30)) %>% # removes young bad freezers
   mutate(grain2 = paste(CHANNEL, SubROI_SubroiAGGR)) %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
-  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
+  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
+  mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
-corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title="shock AA", mar=c(0,0,1,0))
+b = corr.test(a[,2:67])
+corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="shock AA", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 
 a = knew.molten3 %>%
@@ -75,10 +170,11 @@ a = knew.molten3 %>%
   filter(!(EXPT =='YOUNG' & VALENCE=='SHOCK' & CONTEXT=='AA' & FREEZE < 30)) %>% # removes young bad freezers
   mutate(grain2 = paste(CHANNEL, SubROI_SubroiAGGR)) %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
-  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
+  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
+  mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
-corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title="shock AB", mar=c(0,0,1,0))
+b = corr.test(a[,2:67])
+corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="shock AB", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 
 a = knew.molten3 %>%
@@ -87,10 +183,11 @@ a = knew.molten3 %>%
   filter(!(EXPT =='YOUNG' & VALENCE=='SHOCK' & CONTEXT=='AA' & FREEZE < 30)) %>% # removes young bad freezers
   mutate(grain2 = paste(CHANNEL, SubROI_SubroiAGGR)) %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
-  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
+  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
+  mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
-corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title="ctx AA", mar=c(0,0,1,0))
+b = corr.test(a[,2:67])
+corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="ctx AA", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 
 a = knew.molten3 %>%
@@ -99,17 +196,18 @@ a = knew.molten3 %>%
   filter(!(EXPT =='YOUNG' & VALENCE=='SHOCK' & CONTEXT=='AA' & FREEZE < 30)) %>% # removes young bad freezers
   mutate(grain2 = paste(CHANNEL, SubROI_SubroiAGGR)) %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
-  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
+  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
+  mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
-corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title="ctx AB", mar=c(0,0,1,0))
+b = corr.test(a[,2:67])
+corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="ctx AB", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 
 ```
 
 ## OL 
-### Old vs Young
 
+### Old vs Young
 ```{r}
 
 a = knew.molten3 %>%
@@ -118,10 +216,11 @@ a = knew.molten3 %>%
   filter(!(EXPT =='YOUNG' & VALENCE=='SHOCK' & CONTEXT=='AA' & FREEZE < 30)) %>% # removes young bad freezers
   mutate(grain2 = paste(CHANNEL, SubROI_SubroiAGGR)) %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
-  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
+  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
+  mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
-corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title="all young", mar=c(0,0,1,0))
+b = corr.test(a[,2:67])
+corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="all young", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 a = knew.molten3 %>%
   filter(EXPT == 'OLD') %>%
@@ -129,13 +228,15 @@ a = knew.molten3 %>%
   filter(!(EXPT =='YOUNG' & VALENCE=='SHOCK' & CONTEXT=='AA' & FREEZE < 30)) %>% # removes young bad freezers
   mutate(grain2 = paste(CHANNEL, SubROI_SubroiAGGR)) %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
-  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
+  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
+  mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
-corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title="all old", mar=c(0,0,1,0))
+b = corr.test(a[,2:67])
+corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="all old", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 ```
 
+### OL shock vs. context
 ```{r}
 
 a = knew.molten3 %>%
@@ -144,10 +245,11 @@ a = knew.molten3 %>%
   filter(!(EXPT =='YOUNG' & VALENCE=='SHOCK' & CONTEXT=='AA' & FREEZE < 30)) %>% # removes young bad freezers
   mutate(grain2 = paste(CHANNEL, SubROI_SubroiAGGR)) %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
-  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
+  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
+  mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
-corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title="all AA", mar=c(0,0,1,0))
+b = corr.test(a[,2:67])
+corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="all AA", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 a = knew.molten3 %>%
   filter(CONTEXT == 'AB') %>%
@@ -155,10 +257,11 @@ a = knew.molten3 %>%
   filter(!(EXPT =='YOUNG' & VALENCE=='SHOCK' & CONTEXT=='AA' & FREEZE < 30)) %>% # removes young bad freezers
   mutate(grain2 = paste(CHANNEL, SubROI_SubroiAGGR)) %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
-  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
+  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
+  mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
-corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title="all AB", mar=c(0,0,1,0))
+b = corr.test(a[,2:67])
+corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="all AB", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 ```
 
@@ -170,10 +273,11 @@ a = knew.molten3 %>%
   filter(!(EXPT =='YOUNG' & VALENCE=='SHOCK' & CONTEXT=='AA' & FREEZE < 30)) %>% # removes young bad freezers
   mutate(grain2 = paste(CHANNEL, SubROI_SubroiAGGR)) %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
-  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
+  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
+  mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
-corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title="all shock ol", mar=c(0,0,1,0))
+b = corr.test(a[,2:67])
+corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="all shock ol", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 a = knew.molten3 %>%
   filter(VALENCE == 'CONTEXT') %>%
@@ -181,10 +285,11 @@ a = knew.molten3 %>%
   filter(!(EXPT =='YOUNG' & VALENCE=='SHOCK' & CONTEXT=='AA' & FREEZE < 30)) %>% # removes young bad freezers
   mutate(grain2 = paste(CHANNEL, SubROI_SubroiAGGR)) %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
-  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
+  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
+  mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
-corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title="all context ol", mar=c(0,0,1,0))
+b = corr.test(a[,2:67])
+corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="all context ol", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 ```
 
@@ -199,10 +304,11 @@ a = knew.molten3 %>%
   filter(!(EXPT =='YOUNG' & VALENCE=='SHOCK' & CONTEXT=='AA' & FREEZE < 30)) %>% # removes young bad freezers
   mutate(grain2 = paste(CHANNEL, SubROI_SubroiAGGR)) %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
-  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
+  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
+  mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
-corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title=" shock AA", mar=c(0,0,1,0))
+b = corr.test(a[,2:67])
+corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title=" shock AA", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 
 a = knew.molten3 %>%
@@ -211,10 +317,11 @@ a = knew.molten3 %>%
   filter(!(EXPT =='YOUNG' & VALENCE=='SHOCK' & CONTEXT=='AA' & FREEZE < 30)) %>% # removes young bad freezers
   mutate(grain2 = paste(CHANNEL, SubROI_SubroiAGGR)) %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
-  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
+  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
+  mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
-corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title=" shock AB", mar=c(0,0,1,0))
+b = corr.test(a[,2:67])
+corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title=" shock AB", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 
 a = knew.molten3 %>%
@@ -223,10 +330,11 @@ a = knew.molten3 %>%
   filter(!(EXPT =='YOUNG' & VALENCE=='SHOCK' & CONTEXT=='AA' & FREEZE < 30)) %>% # removes young bad freezers
   mutate(grain2 = paste(CHANNEL, SubROI_SubroiAGGR)) %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
-  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
+  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
+  mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
-corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title=" ctx AA", mar=c(0,0,1,0))
+b = corr.test(a[,2:67])
+corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title=" ctx AA", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 
 a = knew.molten3 %>%
@@ -235,10 +343,11 @@ a = knew.molten3 %>%
   filter(!(EXPT =='YOUNG' & VALENCE=='SHOCK' & CONTEXT=='AA' & FREEZE < 30)) %>% # removes young bad freezers
   mutate(grain2 = paste(CHANNEL, SubROI_SubroiAGGR)) %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
-  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
+  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
+  mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
-corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title=" ctx AB", mar=c(0,0,1,0))
+b = corr.test(a[,2:67])
+corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title=" ctx AB", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 
 ```
@@ -246,18 +355,38 @@ corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title=" ctx AB"
 
 ## H2BGFP
 
+### H2B old vs Young
 ```{r}
 
 a = knew.molten3 %>%
-  filter(VALENCE == 'SHOCK') %>%
+  filter(EXPT == 'YOUNG') %>%
   filter(CHANNEL == 'H2BGFP') %>%
   filter(!(EXPT =='YOUNG' & VALENCE=='SHOCK' & CONTEXT=='AA' & FREEZE < 30)) %>% # removes young bad freezers
   mutate(grain2 = paste(CHANNEL, SubROI_SubroiAGGR)) %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
-  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
+  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
+  mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
-corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title="all shock h2b", mar=c(0,0,1,0))
+b = corr.test(a[,2:67])
+corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="all young", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
+
+a = knew.molten3 %>%
+  filter(EXPT == 'OLD') %>%
+  filter(CHANNEL == 'H2BGFP') %>%
+  filter(!(EXPT =='YOUNG' & VALENCE=='SHOCK' & CONTEXT=='AA' & FREEZE < 30)) %>% # removes young bad freezers
+  mutate(grain2 = paste(CHANNEL, SubROI_SubroiAGGR)) %>%
+  ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
+  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
+  mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
+
+b = corr.test(a[,2:67])
+corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="all old", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
+
+```
+
+
+### H2B shock vs context
+```{r}
 
 a = knew.molten3 %>%
   filter(VALENCE == 'CONTEXT') %>%
@@ -265,10 +394,23 @@ a = knew.molten3 %>%
   filter(!(EXPT =='YOUNG' & VALENCE=='SHOCK' & CONTEXT=='AA' & FREEZE < 30)) %>% # removes young bad freezers
   mutate(grain2 = paste(CHANNEL, SubROI_SubroiAGGR)) %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
-  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
+  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
+  mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
-corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title="all context h2b", mar=c(0,0,1,0))
+b = corr.test(a[,2:67])
+corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="all shock h2b", mar=c(0,0,1,0))
+
+a = knew.molten3 %>%
+  filter(VALENCE == 'CONTEXT') %>%
+  filter(CHANNEL == 'H2BGFP') %>%
+  filter(!(EXPT =='YOUNG' & VALENCE=='SHOCK' & CONTEXT=='AA' & FREEZE < 30)) %>% # removes young bad freezers
+  mutate(grain2 = paste(CHANNEL, SubROI_SubroiAGGR)) %>%
+  ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
+  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
+  mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
+
+b = corr.test(a[,2:67], use="complete")
+corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="all context h2b", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 ```
 ### All animals - Compare each group
@@ -282,10 +424,11 @@ a = knew.molten3 %>%
   filter(!(EXPT =='YOUNG' & VALENCE=='SHOCK' & CONTEXT=='AA' & FREEZE < 30)) %>% # removes young bad freezers
   mutate(grain2 = paste(CHANNEL, SubROI_SubroiAGGR)) %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
-  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
+  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
+  mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
-corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title="shock AA", mar=c(0,0,1,0))
+b = corr.test(a[,2:67])
+corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="shock AA", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 
 a = knew.molten3 %>%
@@ -294,10 +437,11 @@ a = knew.molten3 %>%
   filter(!(EXPT =='YOUNG' & VALENCE=='SHOCK' & CONTEXT=='AA' & FREEZE < 30)) %>% # removes young bad freezers
   mutate(grain2 = paste(CHANNEL, SubROI_SubroiAGGR)) %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
-  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
+  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
+  mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
-corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title="shock AB", mar=c(0,0,1,0))
+b = corr.test(a[,2:67])
+corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="shock AB", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 
 a = knew.molten3 %>%
@@ -306,10 +450,11 @@ a = knew.molten3 %>%
   filter(!(EXPT =='YOUNG' & VALENCE=='SHOCK' & CONTEXT=='AA' & FREEZE < 30)) %>% # removes young bad freezers
   mutate(grain2 = paste(CHANNEL, SubROI_SubroiAGGR)) %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
-  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
+  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
+  mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
-corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title="ctx AA", mar=c(0,0,1,0))
+b = corr.test(a[,2:67])
+corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="ctx AA", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 
 a = knew.molten3 %>%
@@ -318,11 +463,11 @@ a = knew.molten3 %>%
   filter(!(EXPT =='YOUNG' & VALENCE=='SHOCK' & CONTEXT=='AA' & FREEZE < 30)) %>% # removes young bad freezers
   mutate(grain2 = paste(CHANNEL, SubROI_SubroiAGGR)) %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
-  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) 
+  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
+  mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-cor1 = cor(a[,2:67], a[,2:67], use=use.method, method=corr.type)
-corrplot(cor1, method="color", order=cluster.method, tl.cex=0.4, title="ctx AB", mar=c(0,0,1,0))
-
+b = corr.test(a[,2:67])
+corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="ctx AB", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 ```
 
